--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
-Theme Name: Our awesome theme
-Author: Alejandro AO
-Description: An awesome theme for WP
+Theme Name: danielsemmelrock_theme
+Author: Daniel Semmelrock
+Description: theme for daniel semmelrock wordpress site
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: _s
